--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -10,6 +10,7 @@
   transition: all 0.2s ease-in-out;
 }
 
-.nav-link:hover::after {
+.nav-link:hover::after,
+.nav-link:focus::after {
   width: 100%;
 }
