--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,11 @@
   font-family: "montserrat alternates", sans-serif;
   scroll-behavior: smooth;
 }
+
+.wrapper {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
